# agent-project

./: .gitignore  Cargo.toml  README.md  cargo.toml  temp.toml
agent-state/: Cargo.toml
agent-state/src/: agent_store.rs  bundle.rs  config.rs  control_state.rs  lib.rs  location.rs  shared_agent_state.rs  task.rs  task_store.rs  telemetry.rs  winner.rs
cbba/: Cargo.toml
cbba/examples/: demo.rs
cbba/src/: bundle.rs  cbba_phase.rs  cbba_runner.rs  lib.rs  task.rs  task_store.rs  winner.rs
cli/: Cargo.toml
cli/src/: commands.rs  distribute_tasks.rs  main.rs  start_cbba.rs
common/: Cargo.toml
common/src/: lib.rs  serialization.rs
common/src/serialization/: mod.rs  rmp.rs
common/src/time/: macos.rs  mod.rs
control-server/: Cargo.toml
control-server/src/: lib.rs  listener.rs
control-server/src/commands/: distribute_tasks.rs  mod.rs  start_cbba.rs
state-server/: Cargo.toml
state-server/src/: agents.rs  bundle.rs  control_state.rs  lib.rs  server.rs  tasks.rs  winners.rs
transport/: Cargo.toml
transport/src/: lib.rs
udp-discovery/: Cargo.toml
udp-discovery/src/: agent_store.rs  discovery.rs  lib.rs
udp-transport/: Cargo.toml
udp-transport/examples/: udp_demo.rs
udp-transport/src/: lib.rs
