[package]
name = "cbba"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
udp_transport = { path = "../udp-transport" }
transport = { path = "../transport" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1"
thiserror = "2.0.17"
