[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-state = { path = "../agent-state" }
control_server = { path = "../control-server" }
cbba = { path = "../cbba" }
common = { path = "../common" }
clap = "4.5.53"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
udp_transport = { path = "../udp-transport" }
transport = { path = "../transport" }
tokio = { version = "1.49.0", features = ["full"] }
