[package]
name = "control_server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-state = { path = "../agent-state" }
common = { path = "../common" }
transport = { path = "../transport" }
udp_transport = { path = "../udp-transport" }
cbba = { path = "../cbba" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
