[package]
name = "state_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
udp_discovery = { path = "../udp-discovery" }
common = { path = "../common" }
agent-state = { path = "../agent-state" }
