[package]
name = "udp_discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
udp_transport = { path = "../udp-transport" }
transport = { path = "../transport" }
common = { path = "../common" }
agent-state = { path = "../agent-state" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
if-addrs = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
